# cargo-generate-simulation-multiphysics_rs

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
src/: main.rs  test_1.rs  test_2.rs
